[package]
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Metaplex Token Metadata SDK"
edition = "2024"
license-file = "../../LICENSE"
name = "mpl-token-metadata"
readme = "README.md"
repository = "https://github.com/metaplex-foundation/mpl-token-metadata"
version = "5.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
borsh = "1.5.7"
num-derive = "^0.4"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-sdk = "2.3"
solana-pubkey = "2.3"
solana-instruction = "2.3"
solana-account-info = "2.3"
solana-program-error = "2.2"
solana-cpi = "2.2"
thiserror = "^2.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "2.3"
solana-sdk = "2.3"
spl-associated-token-account = { version = ">= 1.1.3", features = [
    "no-entrypoint",
] }
spl-token = { version = ">= 3.5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = ">=0.8.0", features = ["no-entrypoint"] }
test-case = "3.1.0"

